# moreau-arena-paper

./: .claudeignore  .dockerignore  .gitignore  AGENTS.md  AGENT_STATE.md  CLAUDE.md  Dockerfile  HANDOFF_FOR_CODEX.md  LICENSE  NEXT_TASKS.md  PHASE1_REPORT.md  PROGRESS.md  Procfile  README.md  ROADMAP.md  ROADMAP_v2.md  SPRINT_REPORT.md  TASKS.md  chronicler.py  council_context_caretaker.md  docker-compose.yml  export_seeds.py  lab_mode.py  moreau_arena_v2.tex  part_b_state.py  pyproject.toml  render.yaml  requirements.txt  roundtable.py  run_ablation.py  run_challenge.py  run_planning.py  run_po.py  run_psi.py  run_s1_tournament.py  run_t003.py  run_t003_psi.py  verify_all.py  verify_t003_matches.py  verify_t003_prompts.py  (+1 more)
agents/: __init__.py  baselines.py  gemini_agent.py  llm_agent.py  llm_agent_v2.py
analysis/: __init__.py  bt_ranking.py  pairwise_matrix.py  requirements.txt  seasonal_report.py
coord/: AGENT_PROTOCOL.md  TASK_TEMPLATE.md
council_records/: 2026-03-07_0513_what_is_the_single_most_important_quality_gate_for.json  2026-03-07_0513_what_is_the_single_most_important_quality_gate_for.md  2026-03-07_0518_is_consciousness_fundamentally_computational_or_do.json  2026-03-07_0518_is_consciousness_fundamentally_computational_or_do.md  2026-03-07_0536_background_context_faq_moreau_arena_1_what_is_more.json  2026-03-07_0536_background_context_faq_moreau_arena_1_what_is_more.md  2026-03-07_0544_background_context_faq_moreau_arena_1_what_is_more.json  2026-03-07_0544_background_context_faq_moreau_arena_1_what_is_more.md  (+20 more)
docs/: AGENTIC_MOREAU_EXECUTION_TODO.md  (+73 more)
(+479 files in other folders)
